<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blagasiva">
    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/blagasiva"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/blagasiva"
            android:orientation="vertical">

            <Button
                android:id="@+id/dDodajOnline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="Dodaj knjigu online" />

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

                <Button
            android:id="@+id/dKategorije"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.7"
            android:background="@drawable/drawable_button"
            android:text="@string/izbor_kategorije" />

        <Button
            android:id="@+id/dAutori"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.7"
            android:background="@drawable/drawable_button"
            android:text="@string/izbor_autori" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tekstPretraga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />

        <Button
            android:id="@+id/dPretraga"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="0.7"
            android:background="@drawable/drawable_button"
            android:text="@string/btn_pretraga" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/dDodajKategoriju"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:enabled="false"
            android:background="@drawable/drawable_button"
            android:text="@string/btn_kategorija" />

        <Button
            android:id="@+id/dDodajKnjigu"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_button"
            android:text="@string/btn_knjiga" />
    </LinearLayout>


    <ListView
        android:layout_marginTop="8dp"

        android:background="@color/darker"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/listaKategorija"/>
       </LinearLayout>

   </ScrollView>

</LinearLayout>