<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blagasiva"
    tools:context="ba.unsa.etf.rma.asim.spirala1.DodavanjeKnjigeAkt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:text="@string/ime_knjige" />

            <EditText
                android:id="@+id/nazivKnjige"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="9"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:text="@string/ime_autora" />

            <EditText
                android:id="@+id/imeAutora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="9"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/naslovnaStr"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/defaultunos" />

            <Button
                android:id="@+id/dNadjiSliku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:text="@string/nadji_sliku" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20dp"
                android:text="@string/izbor_kategorija" />

            <Spinner
                android:id="@+id/sKategorijaKnjige"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dUpisiKnjigu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dodaj_knjigu" />

            <Button
                android:id="@+id/dPonisti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ponisti_knjigu" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
